force-app/main/default/objects/SmokeTestSecurityComplete__e/SmokeTestSecurityComplete__e.object-meta.xml
<CustomObject>
    <description>Published by the SmokeTestOrchestrator after both the post-deployment security score capture and the SecurityScoreComparator threshold evaluation complete. Consumed by the SmokeTestDashboard LWC to update the security status indicator in real time. Carries the execution ID and threshold outcome so the dashboard can query the full SmokeTestSecurityScore__c record if needed.</description>
    <label>Smoke Test Security Complete</label>
    <pluralLabel>Smoke Test Security Completes</pluralLabel>
</CustomObject>