force-app/main/default/objects/SmokeTestSecurityComplete__e/fields/ExecutionId__c.field-meta.xml
<CustomField>
    <fullName>ExecutionId__c</fullName>
    <description>18-character Salesforce ID of the SmokeTestExecution__c record whose security check just completed. Published by: SmokeTestOrchestrator.postExecutionSecurityCheck(). Consumed by: SmokeTestDashboard LWC to correlate the security result with the active execution panel.</description>
    <label>Execution ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>