force-app/main/default/objects/SmokeTestSecurityComplete__e/fields/ThresholdStatus__c.field-meta.xml
<CustomField>
    <fullName>ThresholdStatus__c</fullName>
    <description>String representation of the SecurityComparisonResult status: Pass, Fail, Error, or Skipped. Published by: SmokeTestOrchestrator.postExecutionSecurityCheck(). Consumed by: SmokeTestDashboard LWC to update the security badge color without an additional SOQL query.</description>
    <label>Threshold Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>