force-app/main/default/objects/SmokeTestSecurityComplete__e/fields/Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Timestamp__c</fullName>
    <description>UTC timestamp when the security check finalized. Published by: SmokeTestOrchestrator.postExecutionSecurityCheck(). Consumed by: SmokeTestDashboard LWC to display check completion time without requiring a separate record query.</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>